subscribes to custom measurement message from ud_imarker to get plane to use for plane selection

--- a/package.xml
+++ b/package.xml
@@ -19,12 +19,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>ud_imarker</build_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>message_runtime</run_depend> 
   <run_depend>rospy</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rviz</run_depend>
+  <run_depend>ud_imarker</run_depend>
 
   <export>
       <rosdoc config="${prefix}/rosdoc.yaml"/>
